<resources>
    <string name="app_name">Lich Sample</string>
    <string name="feature_foo_title">Foo Feature</string>
    <string name="launch_simplecoroutine">Launch SimpleCoroutine</string>
    <string name="launch_lifecyclescope">Launch LifecycleScopeDemo</string>
    <string name="launch_mvvmsample">Launch MvvmSample</string>
    <string name="launch_nav_host">Launch NavHost</string>
    <string name="launch_nav_deep_link">Launch Nav DeepLink</string>
    <string name="launch_foofeature">Launch FooFeature</string>
    <string name="launch_barfeature">Launch BarFeature</string>
    <string name="counter_title">Value:</string>
    <string name="counter_no_value">No value.</string>
    <string name="count_up_button">Count up</string>
    <string name="count_down_button">Count down</string>
    <string name="delete_counter_button">Delete Counter</string>
</resources>
