<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mvvm.MvvmSampleActivity">

    <data>

        <variable
            name="viewModel"
            type="com.linecorp.lich.sample.mvvm.SampleViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/counter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/counter_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counter_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@{viewModel.counterText}"
            app:layout_constraintStart_toEndOf="@id/counter_title"
            app:layout_constraintTop_toTopOf="@id/counter_title"
            tools:text="@string/counter_no_value" />

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:visibility="@{safeUnbox(viewModel.loadingVisibility)}"
            app:layout_constraintBottom_toBottomOf="@id/counter_value"
            app:layout_constraintStart_toEndOf="@id/counter_value" />

        <Button
            android:id="@+id/count_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:enabled="@{safeUnbox(viewModel.isOperationEnabled)}"
            android:onClick="@{() -> viewModel.countUp()}"
            android:text="@string/count_up_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_title" />

        <Button
            android:id="@+id/count_down_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:enabled="@{safeUnbox(viewModel.isOperationEnabled)}"
            android:onClick="@{() -> viewModel.countDown()}"
            android:text="@string/count_down_button"
            app:layout_constraintStart_toEndOf="@id/count_up_btn"
            app:layout_constraintTop_toTopOf="@id/count_up_btn" />

        <Button
            android:id="@+id/delete_counter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:enabled="@{safeUnbox(viewModel.isOperationEnabled)}"
            android:onClick="@{() -> viewModel.deleteCounter()}"
            android:text="@string/delete_counter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/count_up_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
